fix blurry images at high resolutions

--- a/css/style.scss
+++ b/css/style.scss
@@ -102,6 +102,9 @@ div.itemThing div:hover .overlayCopy {
 	height: 25px;
 	cursor: pointer;
 }
+img {
+	image-rendering: pixelated;
+}
 
 /* ok back to your regularly scheduled content */
 
